--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
         <!--/.EDUCATION END-->
 
         <!--TESTIMONIAL-->
-        <section id="testimonial">
+        <!--<section id="testimonial">
           <div class="container">
             <div class="row wrap-testimonial">
               <div class="col-md-10 col-md-offset-1">
@@ -730,7 +730,7 @@
             </div>
           </div>
           <div class="mask-testimonial"></div>
-        </section>
+        </section>-->
         <!--/.TESTMONIAL END-->
 
         <!--BLOG-->
