--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
             <a data-scroll="" href="#education">
               <span>Education</span>
             </a>
-            <a data-scroll="" href="#testimonial">
+            <!-- <a data-scroll="" href="#testimonial">
               <span>Testimonial</span>
-            </a>
+            </a> -->
             <a data-scroll="" href="#blog">
               <span>Blog</span>
             </a>
@@ -127,10 +127,6 @@
                       <p class="head-about">
                         Design is the method of putting form and content together. Design, just as art, has multiple definitions there is no single definition. Design can be art. Design can be aesthetics. Design is so simple, that's why it is so complicated.
                       </p>
-                      
-                      <h5 class="name">
-                        N. Fatima
-                      </h5>
                       <img alt="signature" src="images/signature.png">
                     </div>
                   </div>
@@ -144,37 +140,37 @@
                           <tr>
                             <td class="title">Name </td>
                             <td class="break">:</td>
-                            <td> M. Reza</td>
+                            <td> Nida Fatima</td>
                           </tr>
                           <tr>
                             <td class="title">Phone </td>
                             <td class="break">:</td>
-                            <td> +62 8678 999 012</td>
+                            <td> +92 332 4300303</td>
                           </tr>
                           <tr>
                             <td class="title">Email </td>
                             <td class="break">:</td>
-                            <td> bdgpixel@gmail.com</td>
+                            <td> nidafatimah@hotmail.com</td>
                           </tr>
                           <tr>
                             <td class="title">Address </td>
                             <td class="break">:</td>
-                            <td> Cipamokolan street 102 , Bandung, Indonesia</td>
+                            <td> Lahore, Pakistan</td>
                           </tr>
                           <tr>
-                            <td class="title">Skype </td>
+                            <td class="title">Blog </td>
                             <td class="break">:</td>
-                            <td> bdgpixel</td>
+                            <td> nidafolio.herokuapp.com</td>
                           </tr>
                           <tr>
                             <td class="title">Dribbble </td>
                             <td class="break">:</td>
-                            <td> Muh-Reza</td>
+                            <td> nidafatimah</td>
                           </tr>
                           <tr>
                             <td class="title">Behance</td>
                             <td class="break">:</td>
-                            <td> m-reza</td>
+                            <td> nidafatimah</td>
                           </tr>
                         </table>
                       </div>
