Content writing done.

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             <td class="break">:</td>
                             <td> nidafolio.herokuapp.com</td>
                           </tr>
-                          <tr>
+                         <!-- <tr>
                             <td class="title">Dribbble </td>
                             <td class="break">:</td>
                             <td> nidafatimah</td>
@@ -171,7 +171,7 @@
                             <td class="title">Behance</td>
                             <td class="break">:</td>
                             <td> nidafatimah</td>
-                          </tr>
+                          </tr> -->
                         </table>
                       </div>
                     </div>
@@ -193,7 +193,7 @@
                   <span>Work</span>
                 </h3>
                 <p class="content-detail">
-                  Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. <br><br>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros.
+                  I am extremely dedicated to what I create and strive for the best work possible. <br><br>My previous experiences include a whole branding kit, magazine papers, advertisements, brochures, flyers, graphic design, app design, web design, video editing and print design. Accomplishing these assignments have increased my skills in all adobe Design Suite Programs. 
                 </p>
               </div>
               <div class="col-md-9 content-right">
@@ -281,8 +281,7 @@
                   <span>Services</span>
                 </h3>
                 <p class="content-detail">
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                </p>
+                Working as part of a team with printers, copywriters, photographers, stylists, illustrators, other designers, account executives, web developers and marketing specialists.</p>
               </div>
               <div class="col-md-9 content-right">
                 <div class="row">
@@ -296,7 +295,7 @@
                           MARKETING
                         </p>
                         <p class="text-grey">
-                          Typi non habent claritatem insitam est usus legentis in iis qui facit eorum claritatem. 
+                          You can’t expect to just write and have visitors come to you. That’s too passive.
                         </p>
                       </div>
                     </li>
@@ -310,8 +309,7 @@
                           WEB DESIGN
                         </p>
                         <p class="text-grey">
-                          Typi non habent claritatem insitam est usus legentis in iis qui facit eorum claritatem. 
-                        </p>
+                        Design is not just what it looks like and feels like, design is how it works.
                       </div>
                     </li>
 
@@ -321,10 +319,10 @@
                           d
                         </h3>
                         <p class="head-sm">
-                          UI
+                          UI/UX Design
                         </p>
                         <p class="text-grey">
-                          Typi non habent claritatem insitam est usus legentis in iis qui facit eorum claritatem. 
+                          If you think good design is expensive, you should look at the cost of bad design. 
                         </p>
                       </div>
                     </li>
@@ -337,10 +335,10 @@
                           f
                         </p>
                         <p class="head-sm">
-                          DIRECTOR
+                          VIDEOGRAPHY
                         </p>
                         <p class="text-grey">
-                          Typi non habent claritatem insitam est usus legentis in iis qui facit eorum claritatem. 
+                        Excellent music sense, good experience in visual media, video editng in purely professional way. 
                         </p>
                       </div>
                     </li>
@@ -351,10 +349,10 @@
                           p
                         </h3>
                         <p class="head-sm">
-                          UX DESIGN
+                          EVENT PHOTOGRAPHY
                         </p>
                         <p class="text-grey">
-                          Typi non habent claritatem insitam est usus legentis in iis qui facit eorum claritatem. 
+                          Knowing your camera, understanding lighting and developing an eye for choosing the right angle.
                         </p>
                       </div>
                     </li>
@@ -365,10 +363,10 @@
                           m
                         </h3>
                         <p class="head-sm">
-                          FRONT END
+                          BRANDING
                         </p>
                         <p class="text-grey">
-                          Typi non habent claritatem insitam est usus legentis in iis qui facit eorum claritatem. 
+                          A brand for a company is like a reputation for a person. You earn reputation by trying to do hard things well.
                         </p>
                       </div>
                     </li>
@@ -485,8 +483,7 @@
                             <hr>
                             <div class="text-detail">
                               <p>
-                                Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanita per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes.
-                              </p>
+                                Talented graphic designer with diverse skills across print and digital needed on ad-hoc freelance projects. Can turn my creative eye to web, mobile, social media & banner designs. I'm always looking for such projects to keep myself up to date with latest ideas and to know about customer choices.</p>
                             </div>
                           </div>
                         </div>
@@ -730,7 +727,7 @@
         <!--/.TESTMONIAL END-->
 
         <!--BLOG-->
-        <section class="grey-bg" id="blog">
+<!--        <section class="grey-bg" id="blog">
           <div class="container">
             <div class="row">
               <div class="col-md-12">
@@ -745,7 +742,7 @@
                   </div>
                 </div>
                 <!--GRID BLOG-->
-                <div class="grid">
+ <!--               <div class="grid">
                   <div class="grid-item">
                     <div class="wrap-article">
                       <img alt="blog-1" class="img-circle text-center" src="images/blog-1.png">
@@ -850,10 +847,10 @@
 
                 </div>
                 <!--/.GRID BLOG END-->
-              </div>
+ <!--             </div>
             </div>
           </div>
-        </section>
+        </section>-->
         <!--/.BLOG END-->
 
         <!--CONTACT-->
@@ -865,7 +862,7 @@
                   <span>Contact</span>
                 </h3>
                 <p class="content-detail">
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                  Contact me if I can provide you with further information.
                 </p>
 
               </div>
