Design def replaced.

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                   <div class="wrap-about">
                     <div class="w-content">
                       <p class="head-about">
-                        Design is the method of putting form and content together. Design, just as art, has multiple definitions there is no single definition. Design can be art. Design can be aesthetics. Design is so simple, that's why it is so complicated.
+                        Hi, I am a passionate, highly enthusiastic graphic designer. Have strong desire for knowledge and challenges. Actively involved with the latest technology and updates in the graphic field. A fast learner who picks up new skills quickly. Self-educated, self-motivated and versatile  person. Thinking outside the box.
                       </p>
                       <img alt="signature" src="images/signature.png">
                     </div>
