--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                           <tr>
                             <td class="title">Address </td>
                             <td class="break">:</td>
-                            <td> Lahore, Pakistan</td>
+                            <td> 44 - Dev Samaj Road, Lower Mall, Lahore, Pakistan</td>
                           </tr>
                           <tr>
                             <td class="title">Blog </td>
