Work definition modified.

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                   <span>Work</span>
                 </h3>
                 <p class="content-detail">
-                  I am extremely dedicated to what I create and strive for the best work possible. <br><br>My previous experiences include a whole branding kit, magazine papers, advertisements, brochures, flyers, graphic design, app design, web design, video editing and print design. Accomplishing these assignments have increased my skills in all adobe Design Suite Programs. 
+                  I am extremely dedicated to what I create and strive for the best work possible. <br><br>My previous experiences include a whole branding kit through communication design. Interface design, graphic design, mobile app and web design are part of my skills set. Video editing and event photography are my specialties. Accomplishing these assignments have increased my skills in all adobe Design Suite Programs. 
                 </p>
               </div>
               <div class="col-md-9 content-right">
