Employment details modified

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                   <span>Employement</span>
                 </h3>
                 <p class="content-detail">
-                  Working with different types of media, including adobe Photoshop, Illustrator and photography. Working alone or as part of a team as per the requirements of the project. Collaborating with copywriters, photographers, printers, stylists, illustrators, and account managers to give the best service to the clients
+                  Working with different types of media, including Adobe Photoshop, Illustrator and Adobe Premier. Working alone or as part of a team as per the requirements of the project. Collaborating with copywriters, photographers, printers, stylists, illustrators, and account managers to give the best service to the clients
                 </p>
               </div>
               <div class="col-md-9 content-right">
@@ -429,12 +429,12 @@
                               Graphic & Video Designer
                             </p>
                             <p class="company">
-                              Ameer Studio
+                              Ameer's Studio
                             </p>
                             <hr>
                             <div class="text-detail">
                                 <p>
-                                  Performed conceptualisation & execution of stationery designs. Utilizing latest design concepts to keep the studio distinguished from the market. Communicating directly with clients to understand their needs and facilitating them the best way. Design, layouts, highlights and presentations.
+                                  Fashion, Branding, Video.
                                 </p>
                             </div>
                           </div>
@@ -539,7 +539,7 @@
                   </div>
                   <div class="skillbar" data-percent="63%">
                     <div class="title head-sm">
-                      Video Art
+                      Adobe Premier
                     </div>
                     <div class="count-bar">
                       <div class="count"></div>
