Employment Details Modified.

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             <!-- <a data-scroll="" href="#testimonial">
               <span>Testimonial</span>
             </a> -->
-            <a data-scroll="" href="#blog">
+          <!--   <a data-scroll="" href="#blog">
               <span>Blog</span>
-            </a>
+            </a> -->
             <a data-scroll="" href="#contact">
               <span>Contact</span>
             </a>
@@ -434,7 +434,7 @@
                             <hr>
                             <div class="text-detail">
                                 <p>
-                                  Fashion, Branding, Video.
+                                Ameer's Studio works directly with brands and in-house teams, marketing and PR agencies, event video production and wedding videography. I typically filled my role as videographer and video editor in fashion and branding.I'm passonate about creating films that give brands a personality and allow them to better connect with their customers.
                                 </p>
                             </div>
                           </div>
