Employment Details Finalised

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                             <hr>
                             <div class="text-detail">
                                 <p>
-                                Ameer's Studio works directly with brands and in-house teams, marketing and PR agencies, event video production and wedding videography. I typically filled my role as videographer and video editor in fashion and branding.I'm passonate about creating films that give brands a personality and allow them to better connect with their customers.
+                                Ameer's Studio works directly with brands and in-house teams, marketing and PR agencies and event video production.I typically filled my role as videographer and video editor in fashion and branding.I'm passonate about creating films that give brands a personality and allow them to better connect with their customers.
                                 </p>
                             </div>
                           </div>
