--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                   <span>Employement</span>
                 </h3>
                 <p class="content-detail">
-                  Working with different types of media, including Adobe Photoshop, Illustrator and Adobe Premier. Working alone or as part of a team as per the requirements of the project. Collaborating with copywriters, photographers, printers, stylists, illustrators, and account managers to give the best service to the clients
+                  Working with different types of media, including Adobe Photoshop, Illustrator and Adobe Premiere. Working alone or as part of a team as per the requirements of the project. Collaborating with copywriters, photographers, printers, stylists, illustrators, and account managers to give the best service to the clients
                 </p>
               </div>
               <div class="col-md-9 content-right">
@@ -539,7 +539,7 @@
                   </div>
                   <div class="skillbar" data-percent="63%">
                     <div class="title head-sm">
-                      Adobe Premier
+                      Adobe Premiere
                     </div>
                     <div class="count-bar">
                       <div class="count"></div>
