Thesis section added.

--- a/index.html
+++ b/index.html
@@ -272,6 +272,61 @@
         </section>
         <!--/.WORK END-->
 
+
+                <!--EDUCATION-->
+        <section class="grey-bg" id="education">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-3">
+                <h3 class="title-small">
+                  <span>Thesis</span>
+                </h3>
+                <p class="content-detail">
+                  I’m privileged to highlight the plight of child labor by designing a campaign for HRCP – Human Rights Commission of Pakistan. HRCP focuses on combatting the root causes of child labour, poverty, working for the better lives of those men, women and children who work in desperate conditions to ensure their basic survival. In Pakistan many NGOs have conducted campaign towards child labour prevention. HRCP is one of them actively raising its voice against all forms of child labour – better known as modern day slavery.
+                </p>
+              </div>
+              <div class="col-md-9 content-right">
+                <div class="row">
+                  <ul class="listing-item">
+                    <li>
+                    
+                        <div class="wrap-card">
+                          <div class="card">
+                            <h2 class="year">
+                              Curb The Menance Of Child Labour Through Education
+                            </h2>
+                            <p class="job">
+                              Final Year Thesis
+                            </p>
+                            <p class="company">
+                              College of Art & Design, PU
+                            </p>
+                            <hr>
+                            <div class="text-detail">
+                              <p>
+                                 To effectively communicate the issue an effective design campaign is necessary. To play my part in saving the children, I’ve created ‘campaign design’ for HRCP including posters, standees, web and multimedia. An effectual advertising needs to be an effective ‘campaign design’, because it’ll not only directly impact the audience but at least will create awareness among masses to curb the child labour. The campaign has prime perspective to encourage people to herald an effective voice and take responsibility for the children around them.<br><br>
+                                 My design campaign revolves around education as the alternative and the most effective long-term response in the fight against child labor. Education offers the best opportunity to children to break the cycle of poverty. No child should be working. All children should have the right to a good education, the right to play and the right to enjoy their childhood. Lack of education open window to child labour and even causes an increase in its rate. Eradicating child labour means development and better opportunities for everyone.
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                      
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!--/.EDUCATION END-->
+
+
+
+
+
+
+
+
         <!--SERVICES-->
         <section class="white-bg" id="services">
           <div class="container">
