Work Samples Details Updated.

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                   <div class="wrap-about">
                     <div class="w-content">
                       <p class="head-about">
-                        Hi, I am a passionate, highly enthusiastic graphic designer. Have strong desire for knowledge and challenges. Actively involved with the latest technology and updates in the graphic field. A fast learner who picks up new skills quickly. Self-educated, self-motivated and versatile  person. Thinking outside the box.
+                        Hi, I am a passionate, highly enthusiastic graphic designer. Have strong desire for knowledge and challenges. Actively involved with the latest technology and updates in the graphic field. A fast learner who picks up new skills quickly. Self-educated, self-motivated and versatile  person who thinks outside of the box.
                       </p>
                       <img alt="signature" src="images/signature.png">
                     </div>
@@ -203,7 +203,7 @@
                     <a href="images/bw-1.png"><img alt="image" src="images/bw-1.png">
                       <div class="decription-wrap">
                         <div class="image-bg">
-                           <p class="desc">My Resume</p>
+                           <p class="desc">Outfitters</p>
                         </div>
 
                       </div>
@@ -214,7 +214,7 @@
                       <div class="decription-wrap">
                         <div class="image-bg">
                           <p class="desc">
-                            Pangirutan
+                            Garage Tools
                           </p>
                         </div>
                       </div>
@@ -225,7 +225,7 @@
                       <div class="decription-wrap">
                         <div class="image-bg">
                           <p class="desc">
-                            Black Mug
+                            Red Cherry
                           </p>
                         </div>
                       </div>
@@ -236,7 +236,7 @@
                       <div class="decription-wrap">
                         <div class="image-bg">
                           <p class="desc">
-                            Notebook Mockup
+                            Fashion Week
                           </p>
                         </div>
                       </div>
@@ -247,7 +247,7 @@
                       <div class="decription-wrap">
                         <div class="image-bg">
                           <p class="desc">
-                            Presentation
+                            Musical Night
                           </p>  
                         </div>
                       </div>
